# srt-maker

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  README.md  pyproject.toml  test_runner.sh
srt_maker/: __init__.py  audio_extractor.py  burn_cli.py  cli.py  srt_generator.py  subtitle_burner.py  transcriber.py
tests/: conftest.py  test_audio_extractor.py  test_burn_cli.py  test_cli.py  test_srt_generator.py  test_subtitle_burner.py  test_transcriber.py
