[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-maker"
version = "0.1.0"
description = "CLI tool to generate SRT subtitles from video audio using speech recognition"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name"}
]

dependencies = [
    "openai-whisper>=20231117",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "pytest-mock>=3.11.0",
    "pyflakes>=3.0.0",
]

[project.scripts]
srt-maker = "srt_maker.cli:main"
srt-burn = "srt_maker.burn_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["srt_maker"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
